# MinimalUI

./: .gitignore  404.html  CMakeLists.txt  Claude's Propasal.md  README.md  api-examples.html  hashmap.json  index.html  markdown-examples.html  package-lock.json  项目初步解读.md
.github/workflows/: docs.yml
assets/: api-examples.md.C1ihQzqz.js  index.md.CZkDADPn.lean.js
components/: CMakeLists.txt
docs/: api-examples.md  architecture.md  getting-started.md  index.md
docs/.vitepress/: config.mts
docs/development/: esp32-setup.md  hardware.md
examples/: CMakeLists.txt
examples/basic_ui/: App.cpp  CMakeLists.txt
framework/: CMakeLists.txt
framework/include/: DriverFactory.h  GraphicsDriver.h
framework/src/: DriverFactory.cpp
